// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Footer component Footer component renders correctly with props 1`] = `
<footer
  className="footer-class"
>
  <Styled(FooterTopCandidateA)
    className="footer-class"
    copyrightText=""
    legalLinks={Array []}
    navLinks={Array []}
    openEmailSignUpModal={[Function]}
    referenceID=""
  />
  <Connect(Styled(ReduxForm)) />
  <Connect(Styled(ReduxForm)) />
  <Styled(Row)
    className="footer-middle mobile"
    fullBleed={true}
  >
    <FooterMiddleMobile
      className="footer-class"
      navLinkItems={Array []}
    />
  </Styled(Row)>
  <Styled(Row)
    className="footer-middle desktop"
  >
    <FooterMiddleDesktop
      className="footer-class"
      navLinks={Array []}
    />
  </Styled(Row)>
  <div
    className="footer-bottom"
  >
    <Styled(Row)
      className="fullbleed-mobile"
    >
      <Styled(Col)
        className="footer-bottom__slot--1 default-offset"
        colSize={
          Object {
            "large": 4,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(Copyright) />
        <div
          className="poc-hide"
        >
          <Styled(Button)>
            Get Registered User Info
          </Styled(Button)>
          <Styled(Button)>
            Get Order detail
          </Styled(Button)>
        </div>
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--2 default-offset"
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(LegalLinks)
          links={Array []}
        />
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--3 default-offset"
        colSize={
          Object {
            "large": 2,
            "medium": 8,
            "small": 6,
          }
        }
      />
    </Styled(Row)>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(BodyCopy)
          className="reference-id"
          color="text.primary"
          component="p"
          fontFamily="primary"
          fontSize="fs32"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
    </Styled(Row)>
  </div>
</footer>
`;

exports[`Footer component Footer component renders correctly without props 1`] = `
<footer>
  <Styled(FooterTopCandidateA)
    copyrightText=""
    legalLinks={Array []}
    navLinks={Array []}
    openEmailSignUpModal={[Function]}
    referenceID=""
  />
  <Connect(Styled(ReduxForm)) />
  <Connect(Styled(ReduxForm)) />
  <Styled(Row)
    className="footer-middle mobile"
    fullBleed={true}
  >
    <FooterMiddleMobile
      navLinkItems={Array []}
    />
  </Styled(Row)>
  <Styled(Row)
    className="footer-middle desktop"
  >
    <FooterMiddleDesktop
      navLinks={Array []}
    />
  </Styled(Row)>
  <div
    className="footer-bottom"
  >
    <Styled(Row)
      className="fullbleed-mobile"
    >
      <Styled(Col)
        className="footer-bottom__slot--1 default-offset"
        colSize={
          Object {
            "large": 4,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(Copyright) />
        <div
          className="poc-hide"
        >
          <Styled(Button)>
            Get Registered User Info
          </Styled(Button)>
          <Styled(Button)>
            Get Order detail
          </Styled(Button)>
        </div>
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--2 default-offset"
        colSize={
          Object {
            "large": 6,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(LegalLinks)
          links={Array []}
        />
      </Styled(Col)>
      <Styled(Col)
        className="footer-bottom__slot--3 default-offset"
        colSize={
          Object {
            "large": 2,
            "medium": 8,
            "small": 6,
          }
        }
      />
    </Styled(Row)>
    <Styled(Row)
      fullBleed={true}
    >
      <Styled(Col)
        colSize={
          Object {
            "large": 12,
            "medium": 8,
            "small": 6,
          }
        }
      >
        <Styled(BodyCopy)
          className="reference-id"
          color="text.primary"
          component="p"
          fontFamily="primary"
          fontSize="fs32"
          fontWeight="regular"
          letterSpacing="normal"
          lineHeight="normal"
          textAlign="left"
        />
      </Styled(Col)>
    </Styled(Row)>
  </div>
</footer>
`;
